# sflphone

sflphone-1.4.1/kde/doc-translations/: CMakeLists.txt
sflphone-1.4.1/kde/po/: CMakeLists.txt
sflphone-1.4.1/kde/po/bs/: sflphone-client-kde.po
sflphone-1.4.1/kde/po/ca/: sflphone-client-kde.po
sflphone-1.4.1/kde/po/cs/: sflphone-client-kde.po
sflphone-1.4.1/kde/po/da/: sflphone-client-kde.po
sflphone-1.4.1/kde/po/de/: sflphone-client-kde.po
sflphone-1.4.1/kde/po/es/: sflphone-client-kde.po
sflphone-1.4.1/kde/po/et/: sflphone-client-kde.po
sflphone-1.4.1/kde/po/fi/: sflphone-client-kde.po
sflphone-1.4.1/kde/po/fr/: sflphone-client-kde.po
sflphone-1.4.1/kde/po/ga/: sflphone-client-kde.po
sflphone-1.4.1/kde/po/gl/: sflphone-client-kde.po
sflphone-1.4.1/kde/po/hu/: sflphone-client-kde.po
sflphone-1.4.1/kde/po/it/: sflphone-client-kde.po
sflphone-1.4.1/kde/po/ja/: sflphone-client-kde.po
sflphone-1.4.1/kde/po/lt/: sflphone-client-kde.po
sflphone-1.4.1/kde/po/mr/: CMakeLists.txt  sflphone-client-kde.po
sflphone-1.4.1/kde/po/nl/: sflphone-client-kde.po
sflphone-1.4.1/kde/po/pl/: sflphone-client-kde.po
sflphone-1.4.1/kde/po/pt/: sflphone-client-kde.po
sflphone-1.4.1/kde/po/pt_BR/: sflphone-client-kde.po
sflphone-1.4.1/kde/po/ru/: sflphone-client-kde.po
sflphone-1.4.1/kde/po/sk/: sflphone-client-kde.po
sflphone-1.4.1/kde/po/sv/: sflphone-client-kde.po
sflphone-1.4.1/kde/po/tr/: sflphone-client-kde.po
sflphone-1.4.1/kde/po/ug/: CMakeLists.txt  sflphone-client-kde.po
sflphone-1.4.1/kde/po/uk/: sflphone-client-kde.po
(+120 files in other folders)
