add_subdirectory( ca_sflphone-kde/sflphone-kde )
add_subdirectory( de_sflphone-kde/sflphone-kde )
add_subdirectory( it_sflphone-kde/sflphone-kde )
add_subdirectory( nl_sflphone-kde/sflphone-kde )
add_subdirectory( pt_sflphone-kde/sflphone-kde )
add_subdirectory( pt_BR_sflphone-kde/sflphone-kde )
add_subdirectory( sv_sflphone-kde/sflphone-kde )
add_subdirectory( uk_sflphone-kde/sflphone-kde )
